contact form adjustments

--- a/assets/scss/common/_dark.scss
+++ b/assets/scss/common/_dark.scss
@@ -282,7 +282,7 @@ $navbar-dark-active-color:          $link-color-dark;
 */
 
 [data-dark-mode] body .form-control {
-  color: $gray-300;
+  color: $gray-800; /* changed from 300 */
 }
 
 [data-dark-mode] body .form-control::placeholder {
