--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,7 @@
     </div>
     <div class="col-lg-9 col-xl-8 text-center">
       <p class="lead">{{ .Params.lead | safeHTML }}</p>
-      <a class="btn btn-primary btn-lg px-4 mb-2" href="https://www.linkedin.com/in/nathan-alvarado-8b293945/" role="button">Contact</a>
+      <a class="btn btn-primary btn-lg px-4 mb-2" href="/contact/" role="button">Contact</a>
     </div>
   </div>
 </section>
